# wechat_publisher_web

./: .dockerignore  .gitignore  Dockerfile  README.md  custom_nginx.conf  manage.py  prestart.sh  pyproject.toml  run_services.sh  uwsgi.ini
cache/: wechat_media_cache.json
data/output/: media_cache.json
publisher/: admin.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
publisher/migrations/: 0001_initial.py  0002_publishingjob_published_at_and_more.py
publisher/templates/publisher/: upload_form.html  upload_page.html
publisher/tests/: conftest.py  test_cloudinary_client.py  test_frontend_upload.py  test_models.py  test_serializers.py  test_services.py  test_urls.py  test_views.py
publishing_engine/core/: html_processor.py  markdown_processor.py  metadata_reader.py  payload_builder.py
publishing_engine/tests/: test_html_processor.py
publishing_engine/tests/core/: test_html_processor.py  test_payload_builder.py
publishing_engine/tests/publishing_engine/wechat/: test_api.py
publishing_engine/tests/utils/: test_hashing_checking.py
publishing_engine/utils/: file_handler.py  hashing_checking.py  image_processing.py
publishing_engine/wechat/: api.py  auth.py  media_manager.py  schemas.py
wechat_publisher_web/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
